<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_crop"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/topNavBar"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:background="@drawable/title_bg"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/back_button"
            style="@style/actionBarText"
            android:layout_width="80dip"
            android:gravity="center"
            android:text="@string/Back" />

        <View style="@style/titlebarDivider" />

        <TextView
            android:id="@+id/title"
            style="@style/actionBarTitle"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cropImageTitle" />

        <View style="@style/titlebarDivider" />

        <TextView
            android:id="@+id/useButton"
            style="@style/actionBarText"
            android:layout_width="80dip"
            android:gravity="center"
            android:text="@string/next" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/dragLayoutParent"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/transparent" >

        <com.radiumone.effects_sdk.DragLayout
            android:id="@+id/imageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

    <TableLayout
        android:id="@+id/layoutTextButtons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cropHeight"
        android:layout_gravity="center_vertical"
        android:background="@color/black"
        android:orientation="horizontal" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/normal_text"
                style="@style/croptext"
                android:text="@string/normal" />

            <TextView
                android:id="@+id/square_text"
                style="@style/croptext"
                android:text="@string/square" />

            <TextView
                android:id="@+id/custom_text"
                style="@style/croptext"
                android:text="@string/custom" />

            <TextView
                android:id="@+id/threeTwoText"
                style="@style/croptext"
                android:text="@string/threeTwo" />

            <TextView
                android:id="@+id/fiveThreeText"
                style="@style/croptext"
                android:text="@string/fiveThree" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout style="@style/leftButtonHolder" >

                <com.radiumone.effects_sdk.CropSizeButton
                    android:id="@+id/normal"
                    style="@style/cropbutton"
                    android:layout_gravity="left"
                    android:background="@drawable/btn_normal_crop"
                    android:contentDescription="@string/normal_crop" />
            </LinearLayout>

            <LinearLayout style="@style/centerButtonHolder" >

                <com.radiumone.effects_sdk.CropSizeButton
                    android:id="@+id/square"
                    style="@style/cropbutton"
                    android:background="@drawable/btn_square_crop"
                    android:contentDescription="@string/square_crop" />
            </LinearLayout>

            <LinearLayout style="@style/centerButtonHolder" >

                <com.radiumone.effects_sdk.CropSizeButton
                    android:id="@+id/custom"
                    style="@style/cropbutton"
                    android:background="@drawable/btn_custom_crop"
                    android:contentDescription="@string/custom_crop" />
            </LinearLayout>

            <LinearLayout style="@style/centerButtonHolder" >

                <com.radiumone.effects_sdk.CropSizeButton
                    android:id="@+id/threeTwo"
                    style="@style/cropbutton"
                    android:background="@drawable/btn_3x2_crop"
                    android:contentDescription="@string/threextwo_crop" />
            </LinearLayout>

            <LinearLayout style="@style/rightButtonHolder" >

                <com.radiumone.effects_sdk.CropSizeButton
                    android:id="@+id/fiveThree"
                    style="@style/cropbutton"
                    android:background="@drawable/btn_3x5_crop"
                    android:contentDescription="@string/threexfive_crop" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>